# pico_multi_firmware

./: CMakeLists.txt  README.md  bootloader.c  bootloader.ld  build.sh  firmware0.c  firmware0.ld  firmware1.c  firmware1.ld  firmware2.c  firmware2.ld  firmware3.c  firmware3.ld  firmware4.c  firmware4.ld  firmware5.c  firmware5.ld  flash_firmware.h  general.ld  memmap_rp2040.ld  memmap_rp2350.ld  uf2.h  uf2create.c
